metadata/objects/BooleanApp__c.object
<CustomObject>
    <fields>
        <fullName>leadID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>leadID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>BooleanApps</relationshipLabel>
        <relationshipName>BooleanApps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>leadID__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>vote</label>
        <type>Checkbox</type>
    </fields>
    <label>BooleanApp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>BooleanApp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BooleanApps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>